패키지 이름 변경

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gdsc.sch.cherry_app">
+    package="com.gdsc.sch.cherry">
    <application
         android:label="cherry_app"
         android:name="${applicationName}"
