--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.0.1
   change_app_package_name: ^1.1.0
+  google_maps_flutter: ^2.2.5
+  location: ^4.4.0
 #  kopo: ^0.1.3
 
 dev_dependencies:
