--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   change_app_package_name: ^1.1.0
   google_maps_flutter: ^2.2.5
   location: ^4.4.0
+  google_sign_in: ^6.0.2
 #  kopo: ^0.1.3
 
 dev_dependencies:
