--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_maps_flutter: ^2.2.5
   location: ^4.4.0
   google_sign_in: ^6.0.2
+  firebase_core: ^2.7.1
+  firebase_auth: ^4.2.10
 #  kopo: ^0.1.3
 
 dev_dependencies:
