--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
       url: https://github.com/filofan1/tflite_flutter_helper.git
       ref: 783f15e5a87126159147d8ea30b98eea9207ac7
   transition: ^2.0.2
+  audioplayers: ^3.0.1
 #  kopo: ^0.1.3
 
 dev_dependencies:
@@ -78,6 +79,7 @@ flutter:
   assets:
     - assets/img/
     - assets/ml/
+    - assets/sound/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
