--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
       ref: 783f15e5a87126159147d8ea30b98eea9207ac7
   transition: ^2.0.2
   audioplayers: ^3.0.1
+  flutter_native_splash: ^2.2.16
 #  kopo: ^0.1.3
 
 dev_dependencies:
@@ -106,3 +107,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
