--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   transition: ^2.0.2
   audioplayers: ^3.0.1
   flutter_native_splash: ^2.2.16
+  xml2json: ^5.3.6
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
